[package]
name = "chell"
version = "0.1.0"
edition = "2021"
description = "For now, a basic chat app. See README."
repository = "https://github.com/nobodyawesomer/chell"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.1", features = ["derive"] }
tokio = "1.19.2"
