[package]
name = "chell"
version = "0.1.0"
edition = "2021"
description = "For now, a basic chat app. See README."
repository = "https://github.com/nobodyawesomer/chell"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.1", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
